# solar-device-controller

./: .gitignore  AutomationPlatformSpecific.cpp  CMakeLists.txt  DeviceControllerApp.cpp  DeviceControllerApp.h  HttpServer.cpp  HttpServer.h  IftttApp.cpp  IftttApp.h  Prometheus.h  README.md  SolarMetrics.h  SolarPowerMgrApp.cpp  SolarPowerMgrApp.h  main.cpp
automation/: AttributeContainer.h  Automation.cpp  Automation.h  Cacheable.h  CompositeSensor.h  Sensor.cpp  Sensor.h  ToggleSensor.h  algorithm.h  text.h
automation/capability/: Capability.cpp  Capability.h  Toggle.h
automation/constraint/: AndConstraint.h  BooleanConstraint.h  CompositeConstraint.h  Constraint.cpp  Constraint.h  ConstraintEventHandler.h  Constraints.h  NestedConstraint.h  NotConstraint.h  OrConstraint.h  ScheduledConstraint.h  SimultaneousConstraint.h  TimeRangeConstraint.h  ToggleConstraint.h  TransitionDurationConstraint.h  ValueConstraint.h
automation/device/: CoolingFan.h  Device.cpp  Device.h  MutualExclusionDevice.h  PowerSwitch.h
automation/json/: JsonStreamWriter.h  OutputStreamPrinter.h  Printable.h  SerialByteCounter.h  json.h
automation/sensor/: CompositeSensor.h  Sensor.cpp  Sensor.h  ToggleSensor.h
cmake_raspberry/: Makefile
ifttt/: PowerSwitch.h  WebHookEvent.h  WebHookSession.h  ifttt.cpp  ifttt.h
install/etc/solar-power-mgr/: app.xml
install/etc/systemd/system/: solar-power-mgr.service
test/: CMakeLists.txt  app.xml  constraint-tests.cpp  tests.cpp
xmonit/: GpioPowerSwitch.h  OneWireTherm.cpp  OneWireTherm.h  OpenHabSwitch.h  PowerSwitch.h  XmonitPowerSwitch.h  XmonitRequest.h  XmonitSession.h  xmonit.h
